# cpp-cmake-template

./: .gitignore  CMakeLists.txt  README.md  main.cpp  template_config.h.in
